--- a/assignment-3/src/index.html
+++ b/assignment-3/src/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="styles/vendor.css">
 	<link rel="stylesheet" href="styles/app.css">
+	<link rel="stylesheet" href="../src/vendor/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 	<main class="container-fluid">
