--- a/assignment-3/src/index.html
+++ b/assignment-3/src/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/app.css">
 	<link rel="stylesheet" href="../src/vendor/bootstrap/dist/css/bootstrap.min.css">
 </head>
-
+	<button class="btn btn-default" ng-click="onLang()">{{langIs}}</button>
 	<main class="container-fluid">
 		<div class="Main clearfix" ng-view id="content"></div>
 	</main>
