translate á img alt tag

--- a/assignment-3/src/shared/notify/centris-notify-undo.tpl.html
+++ b/assignment-3/src/shared/notify/centris-notify-undo.tpl.html
@@ -4,7 +4,7 @@
 	     there will be any need for custom HTML in the title/message,
 	     so that support has been removed. -->
 	<div class="{{titleClass}}"
-		translate="AppTitle">
+		translate="">
 	</div>
 	<div class="{{messageClass}}">
 		{{title}}
